syntax = "proto3";
package tote.v1;
option go_package = "github.com/ppiankov/tote/api/v1";

service ToteAgent {
  // Controller -> agent: verify digest exists locally, register session.
  rpc PrepareExport(PrepareExportRequest) returns (PrepareExportResponse);

  // Target agent -> source agent: stream image tar (authorized by session).
  rpc ExportImage(ExportImageRequest) returns (stream DataChunk);

  // Controller -> target agent: import image from source agent endpoint.
  rpc ImportFrom(ImportFromRequest) returns (ImportFromResponse);

  // Controller -> agent: list local image digests.
  rpc ListImages(ListImagesRequest) returns (ListImagesResponse);

  // Controller -> agent: resolve a tag reference to a digest via containerd.
  rpc ResolveTag(ResolveTagRequest) returns (ResolveTagResponse);

  // Controller -> agent: remove a corrupt image record from containerd.
  rpc RemoveImage(RemoveImageRequest) returns (RemoveImageResponse);

  // Controller -> source agent: push image to a backup registry.
  rpc PushImage(PushImageRequest) returns (PushImageResponse);
}

message PrepareExportRequest {
  string session_token = 1;
  string digest = 2;
}
message PrepareExportResponse {
  int64 size_bytes = 1;
}

message ExportImageRequest {
  string session_token = 1;
}
message DataChunk {
  bytes data = 1;
}

message ImportFromRequest {
  string session_token = 1;
  string digest = 2;
  string source_endpoint = 3;
}
message ImportFromResponse {
  bool success = 1;
  string error = 2;
}

message ListImagesRequest {}
message ListImagesResponse {
  repeated string digests = 1;
}

message ResolveTagRequest {
  string image_ref = 1;
}
message ResolveTagResponse {
  string digest = 1;
}

message RemoveImageRequest {
  string image_ref = 1;
}
message RemoveImageResponse {}

message PushImageRequest {
  string digest = 1;
  string target_ref = 2;
  string registry_username = 3;
  string registry_password = 4;
  bool insecure = 5;
}
message PushImageResponse {
  bool success = 1;
  string error = 2;
}
